--- a/index.html
+++ b/index.html
@@ -287,15 +287,15 @@
                   </div>
                   <h2 class="experience-sub-title project-title">Scalable Search Engine</h2>
                   <div class="btn-container">
-                     <button
+                     <!-- <button
                         class="btn btn-color-2 project-btn"
                         onclick="location.href='https://github.com/elijahcantu/p5-search-engine'"
                         >
                      Github (Request access to private repo)
-                     </button>
+                     </button> -->
                      <button
                         class="btn btn-color-2 project-btn"
-                        onclick="location.href='https://youtu.be/OeEj5Z57EjY'"
+                        onclick="location.href='https://youtu.be/7NnGWVjkCeE'"
                         >
                      Live Demo
                      </button>
@@ -311,15 +311,15 @@
                   </div>
                   <h2 class="experience-sub-title project-title">Journaling App</h2>
                   <div class="btn-container">
-                     <button
+                     <!-- <button
                         class="btn btn-color-2 project-btn"
                         onclick="location.href='https://github.com/agarwaldivya03/eecs497-proj'"
                         >
                      Github
-                     </button>
+                     </button> -->
                      <button
                         class="btn btn-color-2 project-btn"
-                        onclick="location.href='https://www.youtube.com/playlist?list=PLd5gxdwma7Yg8o07EScSMDd3KJNEjrK1h'"
+                        onclick="location.href='https://youtu.be/up8MeoLWPww'"
                         >
                      Live Demo
                      </button>
@@ -337,16 +337,16 @@
                   <div class="btn-container">
                      <button
                         class="btn btn-color-2 project-btn"
-                        onclick="location.href='https://github.com/elijahcantu/p3-insta485-clientside'"
+                        onclick="location.href='https://youtu.be/xPHmPpKMcjw'"
                         >
-                     Github (Request access to private repo)
+                     Live Demo
                      </button>
-                     <button
+                     <!-- <button
                         class="btn btn-color-2 project-btn"
                         onclick="location.href='https://github.com/'"
                         >
                      Live Demo
-                     </button>
+                     </button> -->
                   </div>
                </div>
             </div>
