fixed image size

--- a/index.html
+++ b/index.html
@@ -283,9 +283,11 @@
                         src="./assets/proj1.png"
                         alt="Project 1"
                         class="project-img"
+                        height="200px"
+                        width="40px"
                         />
                   </div>
-                  <h2 class="experience-sub-title project-title">Scalable Search Engine</h2>
+                  <h2 class="experience-sub-title project-title">Search Engine</h2>
                   <div class="btn-container">
                      <!-- <button
                         class="btn btn-color-2 project-btn"
