--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
          <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Divya Agarwal</h1>
-            <p class="section__text__p2">Aspiring Software Engineer</p>
+            <p class="section__text__p2">Software Engineer</p>
             <div class="btn-container">
                <button 
                   class="btn btn-color-2" 
-                  onclick="window.open('./assets/Divya_Agarwal_Resume-6.pdf')"
+                  onclick="window.open('./assets/Resume_2025.pdf')"
                   >
                Download Resume
                </button>
