--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                <img src="./assets/linkedin.png" alt="LinkedIn profile"
                   class="icon" onclick="location.href='https://www.linkedin.com/in/divya-agarwal-ba2009228/'">
                <img src="./assets/github.png" alt="GitHub profile"
-                  class="icon" onclick="location.href='https://github.com/agarwaldivya03'">
+                  class="icon" onclick="location.href='https://github.com/adivya03'">
             </div>
          </div>
       </section>
@@ -83,7 +83,7 @@
                         class="icon"
                         />
                      <h3>Education</h3>
-                     <p>B.Sc In Computer Science and Economics <br />University of Michigan Ann Arbor</p>
+                     <p>B.S In Computer Science and Economics <br />University of Michigan Ann Arbor</p>
                   </div>
                   <div class="details-container">
                      <img
@@ -97,12 +97,10 @@
                </div>
                <div class="text-container">
                   <p>
-                     I am a dedicated and passionate Computer Science and 
-                     Economics student at the University of Michigan, set to 
-                     graduate in 2025. Throughout my academic journey, I've 
-                     built a strong foundation in everything from software 
-                     development to game theory, and I’m eager to apply these 
-                     skills in real-world scenarios. My goal is to creatively 
+                     I am a dedicated and passionate passionate Software Engineer with robust experience in full software development 
+                     cycles and CI/CD environments, adept at transforming technical concepts into scalable solutions. I demonstrate 
+                     proven abilities to analyze, design, and develop complex systems, with a strong background in 
+                     distributed computing, microservices, and modern web technologies.. My goal is to creatively 
                      solve problems and develop products that 
                      make a meaningful impact in the world.
                   </p>
@@ -325,6 +323,30 @@
                         onclick="location.href='https://youtu.be/up8MeoLWPww'"
                         >
                      Live Demo
+                     </button>
+                  </div>
+               </div>
+               <div class="details-container color-container">
+                  <div class="article-container">
+                     <img
+                        src="./assets/recipes.png"
+                        alt="Recipe Rating analysis"
+                        class="project-img"
+                        />
+                  </div>
+                  <h2 class="experience-sub-title project-title">Predictive  ML Model for Recipe Ratings</h2>
+                  <div class="btn-container">
+                     <!-- <button
+                        class="btn btn-color-2 project-btn"
+                        onclick="location.href='https://github.com/agarwaldivya03/eecs497-proj'"
+                        >
+                     Github
+                     </button> -->
+                     <button
+                        class="btn btn-color-2 project-btn"
+                        onclick="location.href='https://adivya03.github.io/recipes-and-ratings-analysis/'"
+                        >
+                     Model Analysis
                      </button>
                   </div>
                </div>
